[package]
name = "tag"
version = "0.1.0"
authors = ["thecoshman <git@thecoshman.com>"]
edition = "2018"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "tag_common"
path = "src/common/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"