[package]
name = "tag"
version = "0.1.0"
authors = ["thecoshman <git@thecoshman.com>"]
edition = "2018"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
futures = { version = "0.3.13", features = ["thread-pool"]}
tokio = { version = "1.4.0", features = ["full"]}
tokio-util = { version = "0.6.5", features = ["full"]}

[lib]
name = "common"
path = "src/common/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"